# bytes

./: .gitignore  Cargo.toml  README.md  test.sh
derive/: Cargo.toml
derive-tests/: Cargo.toml
derive-tests/src/: lib.rs
derive/src/: lib.rs
src/: lib.rs
src/core/: mod.rs  num.rs  option.rs  primitive.rs  result.rs  tuple.rs
src/std/: arc.rs  box.rs  mod.rs  mutex.rs  ops.rs  os_str.rs  path.rs  rc.rs  rwlock.rs  string.rs  vec.rs
src/std/collections/: hash_map.rs
