[package]
name = "bytes-kman"
version = "0.1.15"
edition = "2021"
description = "serialize and deserialize bytes, a simple way to comunicate to other computer or to save state!"
authors = ["konkitoman"]
license = "GPL-3.0"
repository = "https://github.com/konkitoman/bytes"
keywords = ["serialize", "deserialize", "bytes"]

[workspace]
members = ["derive", "derive-tests"]

[features]
default = ["core", "std"]
core = []
std = []

[dependencies]
bytes-kman-derive = {version = "0.1.5", path = "derive"}
