[package]
name = "derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = {version = "1.0.21"}
proc-macro2 = {version = "1.0.47"}
syn = {version = "1.0.105",  features = ["derive"]}
