[package]
name = "bytes-kman-derive"
version = "0.2.0"
edition = "2021"
authors = ["konkitoman"]
keywords = ["bytes-kman"]
license = "GPL-3.0"
repository = "https://github.com/konkitoman/bytes"
description = "macros for bytes-kman"

[lib]
name = "bytes_kman_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = {version = "1.0.21"}
proc-macro2 = {version = "1.0.47"}
syn = {version = "1.0.105",  features = ["derive"]}
